-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6.0 Beta1, 6.6.0 Beta2, 6.6.0 Beta3
-
None
-
514a6776e (dev), 50d9ed401 (6.6)
I get the following if I use "configure --no-feature-sharedmemory".
FAILED: src/corelib/CMakeFiles/Core.dir/ipc/qsharedmemory_systemv.cpp.o /usr/bin/c++ -DBACKTRACE_HEADER=\"execinfo.h\" -DCore_EXPORTS -DELF_INTERPRETER=\"/lib64/ld-linux-x86-64.so.2\" -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_UP_TO=0x050000 -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_LEAN_HEADERS=1 -DQT_MOC_COMPAT -DQT_NO_AS_CONST -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_FOREACH -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QEXCHANGE -DQT_NO_USING_NAMESPACE -DQT_TYPESAFE_FLAGS -DQT_USE_QSTRINGBUILDER -DQT_WARN_DEPRECATED_UP_TO=0x070000 -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I/tmp/q/src/corelib/Core_autogen/include -I/tmp/q/include -I/tmp/q/include/QtCore -I/[...]/qtbase/src/corelib -I/tmp/q/src/corelib -I/tmp/q/src/corelib/global -I/tmp/q/src/corelib/kernel -I/[...]/qtbase/src/corelib/../3rdparty/tinycbor/src -I/tmp/q/include/QtCore/6.6.0 -I/tmp/q/include/QtCore/6.6.0/QtCore -I/[...]/qtbase/src/corelib/../3rdparty/forkfd -I/tmp/q/src/corelib/.rcc -I/[...]/qtbase/mkspecs/linux-g++ -isystem /usr/include/glib-2.0 -isystem /usr/lib/glib-2.0/include -DNDEBUG -O3 -std=c++17 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -Wsuggest-override -Winvalid-pch -include /tmp/q/src/corelib/CMakeFiles/Core.dir/cmake_pch.hxx -MD -MT src/corelib/CMakeFiles/Core.dir/ipc/qsharedmemory_systemv.cpp.o -MF src/corelib/CMakeFiles/Core.dir/ipc/qsharedmemory_systemv.cpp.o.d -o src/corelib/CMakeFiles/Core.dir/ipc/qsharedmemory_systemv.cpp.o -c /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:33:6: error: 'QSharedMemorySystemV' has not been declared 33 | bool QSharedMemorySystemV::runtimeSupportCheck() | ^~~~~~~~~~~~~~~~~~~~ /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:47:13: error: 'QSharedMemorySystemV' has not been declared 47 | inline void QSharedMemorySystemV::updateNativeKeyFile(const QNativeIpcKey &nativeKey) | ^~~~~~~~~~~~~~~~~~~~ In file included from /tmp/q/include/QtCore/qassert.h:1, from /[...]/qtbase/src/corelib/global/qglobal.h:35, from /tmp/q/include/QtCore/qglobal.h:1, from /[...]/qtbase/src/corelib/global/qt_pch.h:20, from /tmp/q/src/corelib/CMakeFiles/Core.dir/cmake_pch.hxx:5, from <command-line>: /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp: In function 'void updateNativeKeyFile(const QNativeIpcKey&)': /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:49:14: error: 'nativeKeyFile' was not declared in this scope; did you mean 'nativeKey'? 49 | Q_ASSERT(nativeKeyFile.isEmpty() ); | ^~~~~~~~~~~~~ /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp: At global scope: /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:59:7: error: 'QSharedMemorySystemV' has not been declared 59 | key_t QSharedMemorySystemV::handle(QSharedMemoryPrivate *self) | ^~~~~~~~~~~~~~~~~~~~ /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:59:36: error: 'QSharedMemoryPrivate' was not declared in this scope 59 | key_t QSharedMemorySystemV::handle(QSharedMemoryPrivate *self) | ^~~~~~~~~~~~~~~~~~~~ /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:59:58: error: 'self' was not declared in this scope 59 | key_t QSharedMemorySystemV::handle(QSharedMemoryPrivate *self) | ^~~~ /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:83:6: error: 'QSharedMemorySystemV' has not been declared 83 | bool QSharedMemorySystemV::cleanHandle(QSharedMemoryPrivate *self) | ^~~~~~~~~~~~~~~~~~~~ /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:83:40: error: 'QSharedMemoryPrivate' was not declared in this scope 83 | bool QSharedMemorySystemV::cleanHandle(QSharedMemoryPrivate *self) | ^~~~~~~~~~~~~~~~~~~~ /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:83:62: error: 'self' was not declared in this scope 83 | bool QSharedMemorySystemV::cleanHandle(QSharedMemoryPrivate *self) | ^~~~ /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:112:6: error: 'QSharedMemorySystemV' has not been declared 112 | bool QSharedMemorySystemV::create(QSharedMemoryPrivate *self, qsizetype size) | ^~~~~~~~~~~~~~~~~~~~ /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:112:35: error: 'QSharedMemoryPrivate' was not declared in this scope 112 | bool QSharedMemorySystemV::create(QSharedMemoryPrivate *self, qsizetype size) | ^~~~~~~~~~~~~~~~~~~~ /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:112:57: error: 'self' was not declared in this scope 112 | bool QSharedMemorySystemV::create(QSharedMemoryPrivate *self, qsizetype size) | ^~~~ /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:112:73: error: expected primary-expression before 'size' 112 | bool QSharedMemorySystemV::create(QSharedMemoryPrivate *self, qsizetype size) | ^~~~ /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:112:77: error: expression list treated as compound expression in initializer [-fpermissive] 112 | bool QSharedMemorySystemV::create(QSharedMemoryPrivate *self, qsizetype size) | ^ /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:155:6: error: 'QSharedMemorySystemV' has not been declared 155 | bool QSharedMemorySystemV::attach(QSharedMemoryPrivate *self, QSharedMemory::AccessMode mode) | ^~~~~~~~~~~~~~~~~~~~ /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:155:35: error: 'QSharedMemoryPrivate' was not declared in this scope 155 | bool QSharedMemorySystemV::attach(QSharedMemoryPrivate *self, QSharedMemory::AccessMode mode) | ^~~~~~~~~~~~~~~~~~~~ /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:155:57: error: 'self' was not declared in this scope 155 | bool QSharedMemorySystemV::attach(QSharedMemoryPrivate *self, QSharedMemory::AccessMode mode) | ^~~~ /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:155:63: error: 'QSharedMemory' has not been declared 155 | bool QSharedMemorySystemV::attach(QSharedMemoryPrivate *self, QSharedMemory::AccessMode mode) | ^~~~~~~~~~~~~ /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:155:93: error: expression list treated as compound expression in initializer [-fpermissive] 155 | bool QSharedMemorySystemV::attach(QSharedMemoryPrivate *self, QSharedMemory::AccessMode mode) | ^ /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:184:6: error: 'QSharedMemorySystemV' has not been declared 184 | bool QSharedMemorySystemV::detach(QSharedMemoryPrivate *self) | ^~~~~~~~~~~~~~~~~~~~ /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:184:35: error: 'QSharedMemoryPrivate' was not declared in this scope 184 | bool QSharedMemorySystemV::detach(QSharedMemoryPrivate *self) | ^~~~~~~~~~~~~~~~~~~~ /[...]/qtbase/src/corelib/ipc/qsharedmemory_systemv.cpp:184:57: error: 'self' was not declared in this scope 184 | bool QSharedMemorySystemV::detach(QSharedMemoryPrivate *self) | ^~~~
For Gerrit Dashboard: QTBUG-114779 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
500336,2 | Fix -no-feature-sharedmemory | dev | qt/qtbase | Status: MERGED | +2 | 0 |
501014,2 | Fix -no-feature-sharedmemory | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |