Fix -no-feature-sharedmemory

Fixes: QTBUG-114779
Change-Id: I7acf9bc2ba461fe1644c4ff6a157f88c9cce84c4
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
(cherry picked from commit 514a6776e1055015ace1ef6378834a6c4d776864)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>